[tool.poetry]
name = "xontrib-mod"
version = "0.1.0"
description = "Lazily access modules without importing them first."
authors = ["Angus Hollands <goosey15@gmail.com>"]
license = "MIT"
packages = [
  { include = "xontrib" }
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
